base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-tutorial-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-tutorial
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-tutorial
    spec:
      containers:
        - image: chunzhi23/argocd-tutorial
          imagePullPolicy: Always
          name: argocd-tutorial-module
          ports:
            - containerPort: 8080
