base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: be-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-clusterissuer"
spec:
  tls:
    - hosts:
        - jongmin.k8s.scg.skku.ac.kr
      secretName: gitops-tls
  rules:
    - host: jongmin.k8s.scg.skku.ac.kr
      http:
        paths:
          - backend:
              service:
                name: argocd-tutorial-service
                port:
                  number: 80
            path: /
            pathType: Prefix
